plonetheme/onegovbear/theme/scss/search.scss
$searchbox-liveresults-hover-bg-color: darken($menu-bg-color, 5%) !default;
$search-highlight-bg-color: change-color($secondary-color, $lightness:70%, $saturation:90%) !default;
$searchbox-width: 295px;

@include declare-variables(
  searchbox-liveresults-hover-bg-color,
  $search-highlight-bg-color,
  $searchbox-width);


.portal-searchbox-wrapper{

  float: left;
  width: $searchbox-width;
  padding: 6px;
  box-sizing: border-box;
  margin-left: -$searchbox-width;
  display: none;
  z-index: 1;
  right: 0;
  height: 52px;

  @include screen-large {
    display: block;
    &.open {
      position: static !important;
      margin-left: -$searchbox-width !important;
    }
  }

  &.open {
    display: block;
    position: fixed;
    margin-left: 0;
  }

  #portal-searchbox {

    .searchSection {
      display: none;
    }

    & input.searchButton {
      @include hidden-structure();
    }

    & #searchGadget {
      width: 100%;
      padding: 9px 35px 9px 10px;
      float: right;
      box-sizing: border-box;
      box-shadow: none;
      line-height: 1.3em;
    }
  }
}

.LSBox {
  position: relative;
  &:before {
      font-family: FontAwesome;
      content: "\f002";
      position: absolute;
      z-index: 3;
      right: 12px;
      top: 8px;
      font-size: 14px;
      background-color: transparent;
      visibility: visible;
  }

  .ui-menu-item {
    > .group {
      background-color: $gray-light;
    }
  }

  .ui-autocomplete {
    @include screen-small() {
      min-width: 500px;
      max-width: 500px;
    }

    > li > a, > li > span:not(.group) {
      border-color: $gray-light;

      &.ui-state-focus, &:hover, &:visited:hover {
        background-color: $gray-lighter;
        color: $color-primary;
        border-color: $gray-light;
        text-decoration: underline;

        .description {
          color: $color-primary;
        }
      }
    }
  }
}


#searchform .searchButton {
  @include hidden-structure();
}

.highlightedSearchTerm {
  background-color: $search-highlight-bg-color;
}

#portal-sitesearch {
  display: none;
}

